--- a/gtowntv/Base.lproj/Main.storyboard
+++ b/gtowntv/Base.lproj/Main.storyboard
@@ -11,10 +11,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--GTownTV View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="gtowntv" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="GTownTV View Controller" customClass="GTownTVViewController" customModule="gtowntv" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -48,7 +48,7 @@
         <!--Now Playing View Controller-->
         <scene sceneID="qF0-XP-PhD">
             <objects>
-                <viewController id="tXe-Bw-mf4" customClass="NowPlayingViewController" customModule="gtownradio" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="tXe-Bw-mf4" customClass="NowPlayingViewController" customModule="gtowntv" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="sGf-OT-nQ9"/>
                         <viewControllerLayoutGuide type="bottom" id="HGU-iy-wGN"/>
@@ -105,7 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Hu-Xg-2Gt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2270.625" y="-1172.0070422535211"/>
+            <point key="canvasLocation" x="1811" y="65"/>
         </scene>
     </scenes>
 </document>
