--- a/gtowntv/Base.lproj/Main.storyboard
+++ b/gtowntv/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="14113" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="14460.31" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="appleTV" orientation="landscape">
         <adaptation id="light"/>
     </device>
     <dependencies>
         <deployment identifier="tvOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -24,23 +23,43 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hEE-HJ-xsq">
-                                <rect key="frame" x="689" y="259" width="543" height="563"/>
+                                <rect key="frame" x="689" y="70" width="543" height="563"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="543" id="SYt-5f-OvX"/>
                                     <constraint firstAttribute="height" constant="563" id="c1y-2F-yYI"/>
                                 </constraints>
                                 <connections>
-                                    <segue destination="tXe-Bw-mf4" kind="embed" id="8Qh-DK-qGn"/>
+                                    <segue destination="tXe-Bw-mf4" kind="embed" identifier="NowPlayingEmbedID" id="8Qh-DK-qGn"/>
                                 </connections>
                             </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ArJ-pD-eLX" userLabel="Play Button" customClass="SVGPlayButton" customModule="gtowntv" customModuleProvider="target">
+                                <rect key="frame" x="885" y="755" width="150" height="150"/>
+                                <color key="backgroundColor" red="0.94117647058823528" green="1" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="DM8-q7-AWW"/>
+                                    <constraint firstAttribute="height" constant="150" id="tKa-HQ-vdH"/>
+                                </constraints>
+                                <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
+                                <state key="normal" title=" "/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="progressStrokeEnd">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.94117647058823528" green="1" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="hEE-HJ-xsq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="9jc-fC-yJ4"/>
+                            <constraint firstItem="hEE-HJ-xsq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.65" id="9jc-fC-yJ4"/>
+                            <constraint firstItem="ArJ-pD-eLX" firstAttribute="top" secondItem="hEE-HJ-xsq" secondAttribute="bottom" constant="122" id="fN5-80-N5A"/>
+                            <constraint firstItem="ArJ-pD-eLX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hzn-Jc-fjZ"/>
                             <constraint firstItem="hEE-HJ-xsq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="laR-M6-kVf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wu6-TO-1qx"/>
                     </view>
+                    <connections>
+                        <outlet property="playPauseButton" destination="ArJ-pD-eLX" id="eyZ-fN-ktl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
