--- a/gtowntv/Base.lproj/Main.storyboard
+++ b/gtowntv/Base.lproj/Main.storyboard
@@ -32,9 +32,9 @@
                                     <segue destination="tXe-Bw-mf4" kind="embed" identifier="NowPlayingEmbedID" id="8Qh-DK-qGn"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ArJ-pD-eLX" userLabel="Play Button" customClass="SVGPlayButton" customModule="gtowntv" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ArJ-pD-eLX" userLabel="Play Button" customClass="SVGPlayButton" customModule="gtowntv" customModuleProvider="target">
                                 <rect key="frame" x="885" y="755" width="150" height="150"/>
-                                <color key="backgroundColor" red="0.94117647058823528" green="1" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.96078431372549022" green="0.99215686274509807" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="DM8-q7-AWW"/>
                                     <constraint firstAttribute="height" constant="150" id="tKa-HQ-vdH"/>
