--- a/gtowntv/Base.lproj/Main.storyboard
+++ b/gtowntv/Base.lproj/Main.storyboard
@@ -47,17 +47,30 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="G-Town Radio #vers# - Samuel A. Maffei, 2018" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3g-t5-fjI">
+                                <rect key="frame" x="10" y="1042" width="1900" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="pd4-s7-AGp"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.94117647058823528" green="1" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="j3g-t5-fjI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="8FH-eB-LrU"/>
                             <constraint firstItem="hEE-HJ-xsq" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.65" id="9jc-fC-yJ4"/>
+                            <constraint firstAttribute="trailing" secondItem="j3g-t5-fjI" secondAttribute="trailing" constant="10" id="SQZ-Eh-tyF"/>
                             <constraint firstItem="ArJ-pD-eLX" firstAttribute="top" secondItem="hEE-HJ-xsq" secondAttribute="bottom" constant="122" id="fN5-80-N5A"/>
                             <constraint firstItem="ArJ-pD-eLX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hzn-Jc-fjZ"/>
+                            <constraint firstAttribute="bottom" secondItem="j3g-t5-fjI" secondAttribute="bottom" id="iyt-W2-A29"/>
                             <constraint firstItem="hEE-HJ-xsq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="laR-M6-kVf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wu6-TO-1qx"/>
                     </view>
                     <connections>
+                        <outlet property="appInfoLabel" destination="j3g-t5-fjI" id="yey-4s-js5"/>
                         <outlet property="playPauseButton" destination="ArJ-pD-eLX" id="eyZ-fN-ktl"/>
                     </connections>
                 </viewController>
@@ -84,26 +97,26 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIZ-jj-OuJ">
-                                <rect key="frame" x="90" y="118" width="108" height="21"/>
+                                <rect key="frame" x="90" y="118" width="108" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="84f-BB-igJ"/>
+                                    <constraint firstAttribute="height" constant="34" id="84f-BB-igJ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press Play" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAe-Vo-dHg">
-                                <rect key="frame" x="90" y="141" width="108" height="21"/>
+                                <rect key="frame" x="90" y="162" width="108" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="HXG-Se-cF1"/>
+                                    <constraint firstAttribute="height" constant="34" id="HXG-Se-cF1"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="mAe-Vo-dHg" firstAttribute="top" secondItem="TIZ-jj-OuJ" secondAttribute="bottom" constant="2" id="5LU-5d-CDb"/>
+                            <constraint firstItem="mAe-Vo-dHg" firstAttribute="top" secondItem="TIZ-jj-OuJ" secondAttribute="bottom" constant="10" id="5LU-5d-CDb"/>
                             <constraint firstItem="TIZ-jj-OuJ" firstAttribute="leading" secondItem="HUk-Ka-JW2" secondAttribute="leading" id="9oG-22-8qS"/>
                             <constraint firstItem="TIZ-jj-OuJ" firstAttribute="top" secondItem="JOZ-ou-wqN" secondAttribute="bottom" constant="6" id="F0U-Iz-g8B"/>
                             <constraint firstItem="TIZ-jj-OuJ" firstAttribute="trailing" secondItem="HUk-Ka-JW2" secondAttribute="trailing" id="FkR-RW-c4N"/>
